@@ -14,6 +14,13 @@ Where "NUMBER" is the bug number.
    "/server irc://freenode".
  - Fixed building of xchat-text (although not recommended!).
  - Fixed using Strip mIRC colors & Color nicks at the same time.
+ - 
+ - 
+ - 
+ - Perl:
+  * Fixed strip_code so that it no longer take off extra commas (LifeIsPain)
+  * Fixed filename checks so that '/load "filenameWithoutSpaces.pl"'
+    will also work (Lian Wan Situ)
 
 
 ----------------------------------------------------------------------
